Remove custom body styles and fix headline letter spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -142,16 +142,6 @@ html {
   font-size: 62.5%;
 }
 
-body {
-  font: var(--type-body-1-default-font);
-  letter-spacing: var(--type-body-1-default-letter-spacing);
-  margin: 0;
-  line-height: 1.6;
-  color: var(--color-brand-700);
-  background-color: var(--background-color);
-  display: none;
-}
-
 body.appear {
   display: block;
 }
@@ -167,7 +157,7 @@ h1 {
 
 h2 {
   font: var(--type-display-2-font);
-  letter-spacing: var(--type-display-2-letter-spacingg);
+  letter-spacing: var(--type-display-2-letter-spacing);
 }
 
 h3 {
